# Tareas_estructura_datos_y_algoritmo

./: Actividad 2  Actividad 3  README.md  README_CAMBIOS.md  compilar_todos.sh
tarea1/1.1_aerolinea/: CMakeLists.txt
tarea1/1.1_aerolinea/build-windows/: CMakeCache.txt
tarea1/1.1_aerolinea/include/: Airplane.h  ClassType.h  Flight.h  FlightClass.h  Passenger.h
tarea1/1.1_aerolinea/src/: Airplane.cpp  Flight.cpp  FlightClass.cpp  Passenger.cpp  main.cpp
tarea1/1.2_sistema_de_gestión_de_reservas_hotelera/: CMakeLists.txt  README.md
tarea1/1.2_sistema_de_gestión_de_reservas_hotelera/include/: Cliente.h  Habitacion.h  Hotel.h
tarea1/1.3_inventario_distribucion/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tarea2/historial_web_con_lista_doble/: Makefile  README.md  demo  historial_web
tarea2/sistema_de_nomina_de_empleados/: Makefile  nomina
tarea2/vehiculos_en_estación_de_parqueo/: Makefile  main.cpp  parqueo
tarea2/vehículos_en_estación_de_parqueo/: Makefile  parqueo
tarea3/conversor_de_expresiones_Infix_a_Postfix/: Makefile  conversor
tarea3/navegación_de_historial_web_con_lista_doble/: Makefile
tarea3/simulador_de_bodega_de_avion/: Makefile  bodega
tarea3/sistema_de_atención_al_cliente_banco/: Makefile  banco  main.cpp
tarea3/sistema_de_triage_medico/: Makefile  consultorio
tarea4/diagnostico_medico/: Makefile  medical_decision_tree
tarea4/family_tree/: Makefile  family_tree
tarea4/modulos_dependientes/: Makefile  dependency_graph
tarea4/sistema_recomendacion/: Makefile  recommendation_system
(+125 files in other folders)
